--- a/assets/styles/global/variables.scss
+++ b/assets/styles/global/variables.scss
@@ -1,1 +1,13 @@
 $default-font-family: 'Noto Serif Simplified Chinese', 'Roboto', sans-serif;
+// base background color
+$base-bg-light: #99a8c0;
+$base-bg-dark: #091a28;
+// base text color
+$base-text-light: rgba(0, 0, 0, 0.8);
+$base-text-dark: #ebf4f1;
+// sidebar background color
+$sidebar-bg-light: #f5f5f5;
+$sidebar-bg-dark: #313131;
+// sidebar text color
+$sidebar-text-light: rgba(0, 0, 0, 0.8);
+$sidebar-text-dark: #ebf4f1;
