--- a/assets/styles/global/variables.scss
+++ b/assets/styles/global/variables.scss
@@ -1,4 +1,4 @@
-$default-font-family: 'Noto Serif Simplified Chinese', 'Roboto', sans-serif;
+$default-font-family: 'Poppins', 'Noto Serif Simplified Chinese', 'Roboto', sans-serif;
 // base background color
 $base-bg-light: #99a8c0;
 $base-bg-dark: #091a28;
@@ -8,6 +8,12 @@ $base-text-dark: #ebf4f1;
 // sidebar background color
 $sidebar-bg-light: #f5f5f5;
 $sidebar-bg-dark: #313131;
+// sidebar active background color
+$sidebar-active-bg-light: #99a8c0;
+$sidebar-active-bg-dark: #3c3c3c;
+// sidebar hover background color
+$sidebar-hover-bg-light: #f9d374;
+$sidebar-hover-bg-dark: #f9d374;
 // sidebar text color
 $sidebar-text-light: rgba(0, 0, 0, 0.8);
 $sidebar-text-dark: #ebf4f1;
