--- a/assets/styles/global/variables.scss
+++ b/assets/styles/global/variables.scss
@@ -1,19 +1,16 @@
-$default-font-family: 'Poppins', 'Noto Serif Simplified Chinese', 'Roboto', sans-serif;
+$default-font-family: 'Poppins', 'Noto Sans SC', 'Roboto', sans-serif;
 // base background color
-$base-bg-light: #99a8c0;
-$base-bg-dark: #091a28;
+$base-bg-light: rgb(var(--color-primary-200));
+$base-bg-dark: rgb(var(--color-gray-950));
 // base text color
-$base-text-light: rgba(0, 0, 0, 0.8);
-$base-text-dark: #ebf4f1;
+$base-text-light: rgb(var(--color-primary-950));
+$base-text-dark: rgb(var(--color-gray-50));
 // sidebar background color
-$sidebar-bg-light: #f5f5f5;
-$sidebar-bg-dark: #313131;
+$sidebar-bg-light: rgb(var(--color-primary-50));
+$sidebar-bg-dark: rgb(var(--color-gray-900));
 // sidebar active background color
-$sidebar-active-bg-light: #99a8c0;
-$sidebar-active-bg-dark: #3c3c3c;
+$sidebar-active-bg-light: rgb(var(--color-primary-400));
+$sidebar-active-bg-dark: rgb(var(--color-gray-600));
 // sidebar hover background color
-$sidebar-hover-bg-light: #f9d374;
-$sidebar-hover-bg-dark: #f9d374;
-// sidebar text color
-$sidebar-text-light: rgba(0, 0, 0, 0.8);
-$sidebar-text-dark: #ebf4f1;
+$sidebar-hover-bg-light: rgb(var(--color-primary-200));
+$sidebar-hover-bg-dark: rgb(var(--color-gray-800));
