--- a/assets/styles/global/variables.scss
+++ b/assets/styles/global/variables.scss
@@ -14,3 +14,6 @@ $sidebar-active-bg-dark: rgb(var(--color-gray-600));
 // sidebar hover background color
 $sidebar-hover-bg-light: rgb(var(--color-primary-200));
 $sidebar-hover-bg-dark: rgb(var(--color-gray-800));
+// main container background color
+$main-container-bg-light: rgb(var(--color-primary-50));
+$main-container-bg-dark: rgb(var(--color-gray-900));
